Fix alignment of phone with prefix field in layouts

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -921,6 +921,7 @@ a
 
 .phone-prefix
 	width: 110px
+	margin-right: 8px
 
 .collapse-list.ant-collapse
 	background-color: $backgroundColor-notino-white
